$Id: ChangeLog,v 1.7 2005-02-08 23:14:24 cmatsuoka Exp $

Stable versions
---------------

2.1.1 ()
	- added more module format specs
	- added MO3 unpacking support
	- fixed recursive decrunching of module files

2.1.0 (unreleased)
	- Added Takuya Ooura's FFT code
	- Added scope/spectrum analyser modes to xxmp
	- Fixed dynamic driver loading to honour the configuration prefix
	- Added --with-esd option to the configuration script for esd in
	  FreeBSD (reported by Nate Dannenberg <natedac@kscable.com>)
	- Added xxmp panel and module info to XMMS info box
	- Fixed YM3812 emulator output in mono and stereo modes
	- Reordered extra libraries in Makefile.rules to build correctly in
	  IRIX 6.5.10/gcc 2.95.2 (reported by Johan Hattne <hattne@ibg.uu.se>)
	- Added aRts driver
	- Added NAS driver (based on Martin Denn's mpg123 NAS driver)
	- Package only DFSG-compliant files, provide extra files as a patch
	- Added experimental QNX4 driver based on Mike Gorchak's nspmod port
	- Added experimental win32 driver based on Tony Million's mpg123 driver
	- Added NEO Software/Electronic Rats HSC module loader
	- Added Liquid Tracker module 0.0 and 1.0 support
	- Added callback driver for plugins
	- XMMS plugin changed to use the callback driver
	- Added Images Music System support

2.0.4 (20010119):
	- Added driver for synthesized sounds
	- Added Tatsuyuki Satoh's YM3812 emulator
	- Added support to The Player 6.0a modules (using Sylvain "Asle"
	  Chipaux's P60A loader)
	- Added seek capability to XMMS plugin
	- Added (very) experimental AIX driver
	- Added envelope point sanity checks (fixed "Beautiful Ones" IT
	  envelope bug reported by Chris Cox)
	- Added support to dynamic linked drivers (for better packaging)
	- Added option to package only DFSG-compliant code
	- Fixed audioio.h detection in OpenBSD 2.8 (by Chris Cox
	  <cox.family@sk.sympatico.ca>)
	- Max. filter cutoff value changed from 254 to 253 to avoid problems
	  in "Beautiful Ones")